-
Bug
-
Resolution: Fixed
-
P3
-
10, 11, 12
-
b12
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8234313 | 11.0.7-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8235234 | 11.0.7 | Vladimir Kozlov | P3 | Resolved | Fixed | b01 |
please check comments section for steps to reproduce
- backported by
-
JDK-8234313 [AOT] breakpoint events are generated in different threads does not meet expected count when testcase vm/jvmti/Breakpoint/brkp001/brkp00102/brkp00102.html is executed
-
- Resolved
-
-
JDK-8235234 [AOT] breakpoint events are generated in different threads does not meet expected count when testcase vm/jvmti/Breakpoint/brkp001/brkp00102/brkp00102.html is executed
-
- Resolved
-
- relates to
-
JDK-8211743 [AOT] crash in ScopeDesc::decode_body() when JVMTI walks AOT frames
-
- Resolved
-