8209574: [AOT] breakpoint events are generated in different threads does not meet expected count

Disable AOT when debugger is attached.

Reviewed-by: dlong