test/hotspot/jtreg/compiler/aot/AotCompiler.java
@@ -100,6 +100,7 @@ public class AotCompiler {
         }
         List<String> args = new ArrayList<>();
         args.add("--compile-with-assertions");
+        args.add("--info");
         args.add("--output");
         args.add(libName);
         if (file != null) {
